--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 <header>
 	<div>
 		<ul>
-			<li class="logo text">logo</li>
-			<li class="Home text">Home</li>
+			<li class="logo text">Lucky you</li>
+			<li class="Home text"><a>Home</a></li>
 
 		</ul>
 	</div>
 </header>
 <form>
+	<img src="icon.png" height="100px" width="auto">
 	<div class="form">
-	<input type="text" name="name" placeholder="Name" id="input">
+	<input type="text" name="name" placeholder="Your Name Please" id="input">
 	<button class="button"type="button">Submit </button>
 </div>
 </form>
 <div id="script">
-	sadasd
+
 	</div>
 <script type="text/javascript" src="script.js"></script>
 
